--- a/index.html
+++ b/index.html
@@ -1,31 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Trivia Game</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./assets/javascript/app.js"></script>
   </head>
   <body>
-    <form id="trivia-form">
-        What is the name of the little green person in star wars?
-        <br>
-        <input type="checkbox" value="Vader" name="triv-q-1" class="checkbox"> Vader </input>
-        <input type="checkbox" value="Luke" name="triv-q-1"class="checkbox"> Luke </input>
-        <input type="checkbox" value="Yoda" name="triv-q-1"class="checkbox"> Yoda </input>
-        <br>
-      What is the name of the Luke Skywalkers father?
+    <form>
+      What color is the sky?
       <br>
-      <input type="checkbox" value="Vader" name="triv-q-2"class="checkbox"> Vader </input>
-      <input type="checkbox" value="Luke" name="triv-q-2"class="checkbox"> Luke </input>
-      <input type="checkbox" value="Yoda" name="triv-q-2"class="checkbox"> Yoda </input>
+      <input type="radio" name="q-1" value="green"> Green </input>
+      <input type="radio" name="q-1" value="blue"> Blue </input>
+      <input type="radio" name="q-1" value="pink"> Pink </input>
       <br>
-      What is the name of the Luke Skywalkers father?
-      <br>
-      <input type="checkbox" value="Vader" name="triv-q-3"class="checkbox"> Vader </input>
-      <input type="checkbox" value="Luke" name="triv-q-3"class="checkbox"> Luke </input>
-      <input type="checkbox" value="Yoda" name="triv-q-3"class="checkbox"> Yoda </input>
-      <br>
-        <input type="submit" value="Submit">
+      <input type="submit" value="Submit">
     </form>
   </body>
 </html>
-
